lyricue3 (1:3.0.16-1) maverick; urgency=medium

  * Fix missing break in mouse-click handling (LP#664931)

 -- Chris Debenham <chris@adebenham.com>  Sat, 23 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.15-1) maverick; urgency=medium

  * Fix lyricue_display ignores font colour setting on songs (LP#664929)
  * Add mouse-click handling (LP#664931)
  * Fix line-wrap for preview (LP#662893)

 -- Chris Debenham <chris@adebenham.com>  Fri, 22 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.14-1) maverick; urgency=medium

  * Fix preview window display

 -- Chris Debenham <chris@adebenham.com>  Fri, 15 Oct 2010 22:30:00 +1000

lyricue3 (1:3.0.13-1) maverick; urgency=medium

  * Remove multiple Load/Close Lyricue Display items in menu

 -- Chris Debenham <chris@adebenham.com>  Fri, 15 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.12-1) maverick; urgency=medium

  * Remove ServerType setting as it is no longer used
  * Fix preview in add/edit song dialog

 -- Chris Debenham <chris@adebenham.com>  Mon, 11 Oct 2010 17:30:00 +1000

lyricue3 (1:3.0.11.1-1) maverick; urgency=low

  * Increase epoch so will superceed 1:2.3.x

 -- Chris Debenham <chris@adebenham.com>  Sun, 10 Oct 2010 17:30:00 +1000

lyricue3 (3.0.10-1) maverick; urgency=low

  * Release for public
  * Don't complain if access.conf not setup

 -- Chris Debenham <chris@adebenham.com>  Sat, 5 Oct 2010 17:30:00 +1000

lyricue3 (3.0.9.6-1) maverick; urgency=low

  * Re-add locales
  * Don't complain if access.conf not setup

 -- Chris Debenham <chris@adebenham.com>  Sat, 5 Oct 2010 17:30:00 +1000

lyricue3 (3.0.9.6-1) maverick; urgency=low

  * Re-add locales
  * Don't complain if access.conf not setup

 -- Chris Debenham <chris@adebenham.com>  Sat, 5 Oct 2010 17:30:00 +1000

lyricue3 (3.0.9.5-1) maverick; urgency=low

  * Add default items to applications menu to start/stop lyricue_display
  * Add option to lyricue_remote to close the server 

 -- Chris Debenham <chris@adebenham.com>  Tue, 5 Oct 2010 17:31:00 +1000
