@@ -1,6 +1,7 @@
 lyricue3 (1:3.0.16-1) maverick; urgency=medium
 
   * Fix missing break in mouse-click handling (LP#664931)
+  * Fix lyricue_display distorts images (LP#664921)
 
  -- Chris Debenham <chris@adebenham.com>  Sat, 23 Oct 2010 17:30:00 +1000
 
